[package]
name = "pluginc_ewwii"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.29.4"

[dependencies]
ewwii_plugin_api = { path = "../../ewwii/crates/plugin_api" }

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
strip = "symbols"
codegen-units = 1

